src/core-crm/objects/Project_Milestone__c/Project_Milestone__c.object-meta.xml
<CustomObject>
    <description>The Project Milestone data object stores information different milestones identified as important indicators around how a business process is progressing.</description>
    <label>Project Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <description>The business entered name of the milestone.</description>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>