src/core-crm/objects/Project_Milestone__c/fields/Project_Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestone_Status__c</fullName>
    <description>Status of the milestone.</description>
    <label>Project Milestone Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>