src/core-crm/objects/Project_Milestone__c/fields/Project_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestone_Type__c</fullName>
    <description>The type of milestone being recorded.</description>
    <label>Project Milestone Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>